# migration-mcp

./: LICENSE  README.md  pyproject.toml
src/migration_mcp/: __init__.py  __main__.py  connectors.py  core.py  datasets.py  fastapi_app.py  models.py  tool.py
tests/: test_cli.py  test_core.py  test_fastapi.py
